objects/Requirement__c.object
<CustomObject>
    <fields>
        <fullName>BusinessValue__c</fullName>
        <label>Business Value</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Indispensable</fullName>
                </value>
                <value>
                    <fullName>Souhaitée</fullName>
                </value>
                <value>
                    <fullName>Possible</fullName>
                </value>
                <value>
                    <fullName>Différable</fullName>
                </value>
                <value>
                    <fullName>Inutile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Complexity__c</fullName>
        <label>Complexity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>0.5</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GapDescription__c</fullName>
        <label>Gap Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GapIdentified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gap Identified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ImpactDevelopment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Impact on Development</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ImpactFlow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Impact on Flow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent</label>
        <referenceTo>Requirement__c</referenceTo>
        <relationshipLabel>Requirements</relationshipLabel>
        <relationshipName>ExigencesEnfants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Processus__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Processus</label>
        <referenceTo>Processus__c</referenceTo>
        <relationshipName>Exigences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Réalisation complexe</fullName>
                </value>
                <value>
                    <fullName>Evolution des besoins</fullName>
                </value>
                <value>
                    <fullName>Doublon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReferenceRfp__c</fullName>
        <description>Référence de l&apos;exigence dans un RFP (ID, page, chapitre, ...)</description>
        <label>Reference in RFP</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelatedObjects__c</fullName>
        <label>Related Objects</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Scope__c</fullName>
        <label>Scope</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Scope</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solution__c</fullName>
        <label>Solution</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Stage</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Déclaré</fullName>
                    <default>true</default>
                    <label>Déclaré</label>
                </value>
                <value>
                    <fullName>Instruction</fullName>
                </value>
                <value>
                    <fullName>Confirmé</fullName>
                </value>
                <value>
                    <fullName>Arbitrage Requis</fullName>
                </value>
                <value>
                    <fullName>En cours de réalisation</fullName>
                </value>
                <value>
                    <fullName>Abandonné</fullName>
                </value>
                <value>
                    <fullName>Reporté</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>User story</fullName>
                </value>
                <value>
                    <fullName>Règle de gestion</fullName>
                </value>
                <value>
                    <fullName>Fonctionnalité outil</fullName>
                </value>
                <value>
                    <fullName>Process métier</fullName>
                </value>
                <value>
                    <fullName>Champs / Ecrans</fullName>
                </value>
                <value>
                    <fullName>Reporting</fullName>
                </value>
                <value>
                    <fullName>Flux &amp; données</fullName>
                </value>
                <value>
                    <fullName>Change Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Workshop__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Workshop</label>
        <referenceTo>Workshop__c</referenceTo>
        <relationshipName>Exigences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>relatedItems__c</fullName>
        <label>Related Items</label>
        <summaryForeignKey>Configuration__c.Requirement__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Requirement</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>ReferenceRfp__c</columns>
        <columns>Scope__c</columns>
        <columns>Type__c</columns>
        <columns>BusinessValue__c</columns>
        <columns>Status__c</columns>
        <columns>Processus__c</columns>
        <columns>Workshop__c</columns>
        <columns>Stage__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Exigences_MDM</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>ReferenceRfp__c</columns>
        <columns>Scope__c</columns>
        <columns>Processus__c</columns>
        <columns>Status__c</columns>
        <columns>BusinessValue__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Scope__c</field>
            <operation>equals</operation>
            <value>Master data</value>
        </filters>
        <label>Exigences MDM</label>
    </listViews>
    <listViews>
        <fullName>Exigences_Marketing</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>ReferenceRfp__c</columns>
        <columns>Scope__c</columns>
        <columns>Processus__c</columns>
        <columns>Status__c</columns>
        <columns>BusinessValue__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Scope__c</field>
            <operation>equals</operation>
            <value>Marketing</value>
        </filters>
        <label>Exigences Marketing</label>
    </listViews>
    <listViews>
        <fullName>Exigences_Sales</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>ReferenceRfp__c</columns>
        <columns>Scope__c</columns>
        <columns>Parent__c</columns>
        <columns>Processus__c</columns>
        <columns>Status__c</columns>
        <columns>BusinessValue__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Scope__c</field>
            <operation>equals</operation>
            <value>Sales</value>
        </filters>
        <label>Exigences Sales</label>
    </listViews>
    <listViews>
        <fullName>Exigences_Services</fullName>
        <columns>CREATEDBY_USER</columns>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Type__c</columns>
        <columns>ReferenceRfp__c</columns>
        <columns>Scope__c</columns>
        <columns>Processus__c</columns>
        <columns>Workshop__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Scope__c</field>
            <operation>equals</operation>
            <value>Services,Field Services</value>
        </filters>
        <label>Exigences Services</label>
    </listViews>
    <listViews>
        <fullName>Technical_Scope</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Scope__c</columns>
        <columns>Description__c</columns>
        <columns>Solution__c</columns>
        <columns>Stage__c</columns>
        <columns>Processus__c</columns>
        <columns>ReferenceRfp__c</columns>
        <columns>Workshop__c</columns>
        <columns>BusinessValue__c</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Scope__c</field>
            <operation>equals</operation>
            <value>Technical Scope</value>
        </filters>
        <label>Exigences Technique</label>
    </listViews>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requirements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>